# china-nev-transition

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GITHUB_PUBLISHING.md  LICENSE  PROJECT_ROADMAP.md  PUBLICATION_LOG.md  README.md  _quarto.yml  final_report.qmd  index.qmd  pyproject.toml  references.bib  requirements.txt
.github/workflows/: publish.yml
data/: README.md
data/manual/: fleet_turnover_assumptions.csv  pre2021_double_entry.csv  source_register.csv
data/processed/: auto_exports_2021_2025.csv  china_auto_market_2015_2025.csv  current_market_pulse.csv  derived_annual_metrics.csv  export_metrics.csv  fleet_charging_snapshot.csv  fleet_turnover_scenarios.csv  key_metrics.csv  nev_powertrain_sales_2020_2024.csv  policy_targets.csv  powertrain_mix_metrics.csv  sales_share_backtest_2023_2025.csv  scenario_shares_2025_2030.csv
data/raw/: README.md  manifest.csv
data/raw/source_snapshots/: audit2015auto.txt  audit2015nev.txt  (+16 more)
data/schema/: datasets.json
docs/: index.html  robots.txt  search.json  sitemap.xml  styles.css
docs/notebooks/: 01_exploration.html
notebooks/: 01_exploration.ipynb
notes/: research-log.md
scripts/: bootstrap.ps1  build_analysis.py  build_notebook.py  build_provenance.py  rebuild.ps1  validate_project.py
src/: __init__.py  data_validation.py  fleet_figures.py  fleet_turnover.py  market_extensions.py  market_figures.py  metrics.py  scenario_validation.py  scenarios.py
tests/: test_data_schema.py  test_fleet_turnover.py  test_market_extensions.py  test_metrics.py  test_scenarios.py
